--- a/index.html
+++ b/index.html
@@ -3,29 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grid-Naming</title>
     <style>
-        h1{
-            color: wheat;
-            text-align: center;
-            font-size: 60px;
-            text-transform: capitalize;
-            text-shadow: -2px -2px 2px black, 2px 2px 2px gold;
-            word-spacing: 5px;
-            letter-spacing: 5px;
-            background-image: url(bg\ img.jpeg);
+        body{font-family: Arial, Helvetica, sans-serif;}
+        h1{padding: 0 0 0 40px;}
+        .container{ 
+        background-color:#eee;
+        width:80%;
+        margin: 45px auto 0;
+        display: grid;
+        grid-template-columns: repeat(3,[col-start] 1fr [col-end]);
+        grid-template-rows:[header-start] 120px [header-end menu-start] 60px  [menu-end box-start] 100px [box-end content-start] 400px [content-end footer-start] 50px [footer-end];
+        gap: 15px;
         }
-
+        .header{
+            background-color: orangered;
+            grid-row: 1/2;
+            grid-column: 1/-1;
+        }
+        .menu{
+            background-color: yellowgreen;
+            grid-row: menu-start / menu-end;
+            grid-column: col-start 1 / col-end 3;
+        }
+        .box1{background-color: rgb(216, 216, 27);}
+        .box2{background-color: blueviolet;}
+        .sidebar{background-color: black; grid-row: box-start / content-end;}
+        .content{background-color: chartreuse; grid-row: content-start / content-end; grid-column: col-start 1 / col-end 2;}
+        .footer{background:orangered; grid-row: footer-start / footer-end; grid-column: col-start 1/ col-end 3 ;}
+        .items{font-size: 20px; color: white;}
     </style>
 </head>
 <body>
-    <h1>CSS Text style</h1>
-    <h2 style="color: brown; font-size: 5rem;">Way to Apply CSS</h2>
-    <!-- Types of css -->
-    <ol>
-        <li>Inline css</li>
-        <li>Internal css</li>
-        <li>External css</li>
-    </ol>
+    <div class="container">
+        <div class="items header">header</div>
+        <div class="items menu">menu</div>
+        <div class="items box1">box1</div>
+        <div class="items box2">box2</div>
+        <div class="items sidebar">sidebar</div>
+        <div class="items content">content</div>
+        <div class="items footer"><a href="index.html">Copyright@copyright</a></div>
+    </div>
 </body>
 </html>
